--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@types/react-native-video": "^5.0.3",
     "appcenter": "3.1.1",
     "appcenter-analytics": "3.1.1",
     "appcenter-crashes": "3.1.1",
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "react-native-video": "^5.1.0-alpha8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
