--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "appcenter-crashes": "3.1.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.0-alpha8"
   },
   "devDependencies": {
