--- a/package.json
+++ b/package.json
@@ -10,40 +10,40 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.8.10",
-    "@react-navigation/stack": "^5.12.8",
-    "@types/react-native-video": "^5.0.3",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
+    "@types/react-native-video": "^5.0.4",
     "appcenter": "3.1.1",
     "appcenter-analytics": "3.1.1",
     "appcenter-crashes": "3.1.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-elements": "^3.0.0-alpha.1",
-    "react-native-gesture-handler": "^1.9.0",
+    "react-native-elements": "^3.3.1",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^1.13.2",
-    "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.15.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^2.18.1",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-video": "^5.1.0-alpha8"
+    "react-native-video": "^5.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
+    "@babel/core": "^7.13.10",
+    "@babel/runtime": "^7.13.10",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
-    "@types/react-native": "^0.63.2",
-    "@types/react-test-renderer": "^16.9.2",
+    "@types/react-native": "^0.63.52",
+    "@types/react-test-renderer": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
+    "prettier": "^2.2.1",
     "react-test-renderer": "16.13.1",
-    "prettier": "^2.0.4",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.9"
   },
   "jest": {
     "preset": "react-native",
